[gd_scene load_steps=26 format=2]

[ext_resource path="res://addons/angelica/Games/Pong/logic/ceiling_floor.gd" type="Script" id=1]
[ext_resource path="res://addons/angelica/Games/Pong/logic/wall_left.gd" type="Script" id=2]
[ext_resource path="res://addons/angelica/Games/Pong/BallLink.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/Games/Pong/logic/ball.gd" type="Script" id=4]
[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/angelica/Games/Pong/logic/paddle.gd" type="Script" id=6]
[ext_resource path="res://addons/angelica/Games/Pong/logic/score.gd" type="Script" id=7]
[ext_resource path="res://addons/angelica/Games/Pong/logic/wall_right.gd" type="Script" id=8]
[ext_resource path="res://addons/kenney_interface_sounds/drop_003.wav" type="AudioStream" id=9]
[ext_resource path="res://addons/kenney_interface_sounds/drop_002.wav" type="AudioStream" id=10]
[ext_resource path="res://addons/kenney_interface_sounds/confirmation_001.wav" type="AudioStream" id=11]
[ext_resource path="res://addons/kenney_interface_sounds/confirmation_002.wav" type="AudioStream" id=12]
[ext_resource path="res://addons/angelica/Games/Pong/Player1.gd" type="Script" id=13]
[ext_resource path="res://addons/angelica/Games/Pong/pong.gd" type="Script" id=14]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1.4, 0.8, 1.65, 0.43 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )
border_width_right = 3
border_color = Color( 0.313726, 0.0627451, 0.313726, 0.427451 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFontData" id=4]
font_path = "res://addons/angelica/fonts/OpenSans-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 160
outline_size = 2
outline_color = Color( 8.21, 0.05, 13.83, 0.7 )
font_data = SubResource( 4 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 5.0

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 50.4294, 161.644 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 320, 18.494 )

[sub_resource type="CapsuleShape2D" id=11]

[node name="Pong" type="Node2D"]
pause_mode = 2
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
material = SubResource( 1 )
margin_left = 25.0
margin_top = 11.0
margin_right = 617.0
margin_bottom = 313.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
material = SubResource( 1 )
margin_left = 25.0
margin_top = 13.0
margin_right = 321.0
margin_bottom = 315.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 62.0
margin_top = 49.0
margin_right = 576.0
margin_bottom = 278.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0.223529, 0.223529, 0.223529, 0 )
bbcode_enabled = true
bbcode_text = "[center]0  0[/center]"
text = "0  0"
scroll_active = false
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Area2D" parent="."]
pause_mode = 1
modulate = Color( 0.67, 6.09, 5.1, 1 )
position = Vector2( 51.8145, 165.644 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Player2" type="Node2D" parent="Left"]
position = Vector2( 16, -16 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Left/Player2"]
modulate = Color( 1.01569, 1.01961, 3.01569, 1 )
margin_right = 40.0
margin_bottom = 40.0
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/268a.png[/img]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource( 6 )

[node name="Right" type="Area2D" parent="."]
pause_mode = 1
modulate = Color( 1.14, 1.14, 6.09, 1 )
position = Vector2( 588.862, 165.698 )
script = ExtResource( 6 )

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource( 7 )

[node name="Player1" type="Node2D" parent="Right"]
position = Vector2( -0.275635, -0.285522 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Right/Player1"]
margin_left = -8.13788
margin_top = -7.71689
margin_right = 31.8621
margin_bottom = 32.2831
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/268a.png[/img]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" type="Area2D" parent="."]
pause_mode = 1
process_priority = 1
position = Vector2( 320, 160 )
script = ExtResource( 4 )

[node name="Player3" type="Node2D" parent="Ball"]
position = Vector2( -8, -8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Ball/Player3"]
modulate = Color( 0.75, 1.75, 1.16, 1 )
margin_right = 17.0
margin_bottom = 17.0
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/26aa.png[/img]"
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collision" type="CollisionShape2D" parent="Ball"]
pause_mode = 2
shape = SubResource( 8 )

[node name="LeftWall" type="Area2D" parent="."]
pause_mode = 1
position = Vector2( -44.802, 99.426 )
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( 52.5572, 62.8507 )
scale = Vector2( 0.419587, 1.03551 )
shape = SubResource( 9 )

[node name="RightWall" type="Area2D" parent="."]
pause_mode = 1
position = Vector2( 623, 170.608 )
script = ExtResource( 8 )

[node name="Collision2" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 11, -4.96402 )
scale = Vector2( 0.419587, 1.03551 )
shape = SubResource( 9 )

[node name="Ceiling" type="Area2D" parent="."]
pause_mode = 1
position = Vector2( 320, 22 )
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
pause_mode = 2
position = Vector2( 0.730417, -25.2585 )
shape = SubResource( 10 )

[node name="Floor" type="Area2D" parent="."]
pause_mode = 1
position = Vector2( 320, 410 )
script = ExtResource( 1 )
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
position = Vector2( -0.0523376, -81.8441 )
shape = SubResource( 10 )

[node name="closebutton2" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -6.739

[node name="AudioRight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.377

[node name="goal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.818

[node name="victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Player1" type="KinematicBody2D" parent="."]
position = Vector2( 141.421, 131.522 )
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource( 11 )

[node name="left_control" type="RichTextLabel" parent="."]
modulate = Color( 2.3098, 1, 17.9216, 0.0980392 )
margin_left = 2.0
margin_top = 20.0
margin_right = 71.0
margin_bottom = 319.0
bbcode_enabled = true
bbcode_text = "[url=up][img]res://addons/angelica/images/64/1f53c.png[/img]
                
				
				
				
				[url=down]
				
				
				
				
				
[img]res://addons/angelica/images/64/1f53d.png[/img]
[/url]"
text = "
                
				
				
				
				
				
				
				
				
				

"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_control" type="RichTextLabel" parent="."]
modulate = Color( 2.3098, 1, 17.9216, 0.0980392 )
margin_left = 578.0
margin_top = 20.0
margin_right = 657.0
margin_bottom = 319.0
bbcode_enabled = true
bbcode_text = "[url=up][img]res://addons/angelica/images/64/1f53c.png[/img]
                
				
				
				
				[url=down]
				
				
				
				
				
[img]res://addons/angelica/images/64/1f53d.png[/img]
[/url]"
meta_underlined = false
text = "
                
				
				
				
				
				
				
				
				
				

"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="meta_hover_ended" from="left_control" to="Left" method="_on_left_control_meta_hover_ended"]
[connection signal="meta_hover_started" from="left_control" to="Left" method="_on_left_control_meta_hover_started"]
[connection signal="meta_hover_ended" from="right_control" to="Right" method="_on_right_control_meta_hover_ended"]
[connection signal="meta_hover_started" from="right_control" to="Right" method="_on_right_control_meta_hover_started"]
